# pete_todoapp

./: README.md  pyproject.toml
src/pete_todoapp/: app.py  lib.py
