[tool.poetry]
name = "pete-todoapp"
version = "0.1.0"
description = ""
authors = ["Andy Miles <akmiles@icloud.com>"]
readme = "README.md"
packages = [{include = "pete_todoapp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
